force-app/main/default/objects/Skywave_Airport__mdt/Skywave_Airport__mdt.object-meta.xml
<CustomObject>
    <description>SSOT for the Skywave airport network geography (code, city, name, lat/lon). Deployed as metadata (no seed). Read via the cached Skywave_Airports.ALL accessor by every consumer: website picker, demo monitor, rental agent action, and nearest() geolocation.</description>
    <label>Skywave Airport</label>
    <pluralLabel>Skywave Airports</pluralLabel>
</CustomObject>