force-app/main/default/objects/Skywave_Airport__mdt/fields/Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>Airport_Name__c</fullName>
    <label>Airport Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>