force-app/main/default/objects/Skywave_Airport__mdt/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <label>Aliases</label>
    <description>Comma-separated alternate tokens that resolve to this airport — e.g. the IATA metropolitan-area code (NYC for JFK, LON for LHR) and common city-name variants. Consumed by Skywave_Airports.resolveCode so flight search accepts metro codes and city names, not just the specific airport code.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>