force-app/main/default/objects/Skywave_Airport__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>IATA Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>